--- a/style.css
+++ b/style.css
@@ -303,4 +303,35 @@ footer {
     footer {
         font-size: 0.9rem;        /* Tamanho da fonte do rodapé em telas pequenas */
     }
+
+    /* Responsividade para meu celular */
+@media (max-width: 360px) {
+
+    h1 {
+        font-size: 1.6rem;        /* Tamanho da fonte em telas pequenas */
+        letter-spacing: 0rem;        /* Espaçamento entre letras em telas pequenas */
+    }
+
+    section input {
+        width: 14rem;        /* Largura total dos inputs em telas pequenas */
+    }
+
+    section button {
+        padding: 0.4rem 0.3rem;        /* Espaçamento interno do botão em telas pequenas */
+        font-size: 0.6rem;        /* Tamanho da fonte do botão em telas pequenas */
+    }
+
+    .resultados-pesquisa {
+        width: 70%;        /* Largura da caixa de resultados em telas pequenas */
+        height: 40vh;        /* Altura da caixa de resultados em telas pequenas */
+    }
+
+    .item-resultado h2 {
+        font-size: 0.8rem;        /* Tamanho da fonte dos títulos em telas pequenas */
+    }
+
+    footer {
+        font-size: 0.6rem;        /* Tamanho da fonte do rodapé em telas pequenas */
+    }
+}
 }
